--- a/aplicacionICBF.csproj
+++ b/aplicacionICBF.csproj
@@ -71,6 +71,7 @@
     <Compile Include="MadreComunitaria.Designer.cs">
       <DependentUpon>MadreComunitaria.cs</DependentUpon>
     </Compile>
+    <Compile Include="modelo\NiñosDAO.cs" />
     <Compile Include="modelo\ORM.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -78,6 +79,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="fomNiños.resx">
+      <DependentUpon>fomNiños.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
