cambios de media clase

--- a/aplicacionICBF.csproj
+++ b/aplicacionICBF.csproj
@@ -53,11 +53,11 @@
     <Compile Include="fomNiños.Designer.cs">
       <DependentUpon>fomNiños.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="formJardin.cs">
       <SubType>Form</SubType>
@@ -83,8 +83,8 @@
     <EmbeddedResource Include="fomNiños.resx">
       <DependentUpon>fomNiños.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formJardin.resx">
       <DependentUpon>formJardin.cs</DependentUpon>
