--- a/App.config
+++ b/App.config
@@ -6,6 +6,9 @@
         <add name="aplicacionICBF.Properties.Settings.ICBFConnectionString"
             connectionString="Data Source=DESKTOP-DVTF0L7\SQLEXPRESS;Initial Catalog=ICBF;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="aplicacionICBF.Properties.Settings.ICBFConnectionString1"
+            connectionString="Data Source=BOGAPRCSFFSD100\SQLEXPRESS;Initial Catalog=ICBF;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
