--- a/aplicacionICBF.csproj
+++ b/aplicacionICBF.csproj
@@ -60,7 +60,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ORM.dbml</DependentUpon>
     </Compile>
-    <Compile Include="modelo\RegistroJardin.cs" />
+    <Compile Include="modelo\RegistroJardinDAO.cs" />
     <Compile Include="PanelAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
