CRUD de registro_Jardin

--- a/App.config
+++ b/App.config
@@ -12,6 +12,9 @@
         <add name="aplicacionICBF.Properties.Settings.ICBFConnectionString2"
             connectionString="Data Source=CHECHOPC\SQLEXPRESS;Initial Catalog=ICBF;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="aplicacionICBF.Properties.Settings.ICBFConnectionString3"
+            connectionString="Data Source=BOGAPRCSFFSD111;Initial Catalog=ICBF;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
