--- a/App.config
+++ b/App.config
@@ -15,6 +15,9 @@
         <add name="aplicacionICBF.Properties.Settings.ICBFConnectionString3"
             connectionString="Data Source=BOGAPRCSFFSD111;Initial Catalog=ICBF;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="aplicacionICBF.Properties.Settings.bancoConnectionString"
+            connectionString="Data Source=BOGAPRCSFFSD100\SQLEXPRESS;Initial Catalog=banco;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
